<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyShop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="title_activity_my_shopcar">MyShopcar</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_hots_goods">HotsGoodsActivity</string>
    <string name="shopcar">购物车</string>
    <string name="more">更多</string>
    <string name="title_activity_deliver_address">DeliverAddress</string>
    <string name="title_activity_address_info">AddressInfo</string>
    <string name="myaddress">我的收货地址</string>
    <string name="delete_address">删除地址</string>
    <string name="receive_name">收货人</string>
    <string name="phone_number">电话号码</string>
    <string name="post_number">邮政编码</string>
    <string name="place_about">所在地区</string>
    <string name="place_info">详细地址</string>
    <string name="title_activity_wait_recevie_goods">WaitRecevieGoods</string>
    <string name="wait_re_go">待收货</string>
    <string name="wait_pay">待付款</string>
    <string name="all_order">全部订单</string>
    <string name="wait_sened">待发送</string>
    <string name="title_activity_about_version_acvitity">AboutVersionAcvitity</string>
    <string name="aboutver">关于版本</string>
    <string name="title_activity_feed_back">FeedBack</string>
    <string name="feedback_say">意见反馈</string>
    <string name="commit">提交</string>
    <string name="feedback_edit">请输入您宝贵的意见</string>
    <string name="title_activity_use_info">UseInfo</string>
    <string name="useinfo">使用详情</string>
    <string name="title_activity_scan_two_code">ScanTwoCodeActivity</string>
    <string name="title_activity_wait_pay">WaitPay</string>
    <string name="scan_title">扫一扫</string>
    <string name="title_activity_my_all_order">MyAllOrder</string>
    <string name="allorder">全部订单</string>
    <string name="title_activity_wait_go_sen">WaitGoSen</string>
    <string name="scan_bel_txt">扫描商品二维码、条形码、快递单</string>
    <string name="title_activity_att_store">AttStore</string>
    <string name="attstore">关注店铺</string>
    <string name="canleatt">取消关注</string>
    <string name="attcanled">已取消</string>
    <string name="store_level">店铺荣誉</string>
    <string name="title_activity_store_info_next">店铺信息</string>
    <string name="scan_text">扫描</string>
    <string name="setdefultaddaddress">设为默认地址 </string>
    <string name="title_activity_bao_bei_list">BaoBeiList</string>
    <string name="baobeilist">宝贝列表</string>
    <string name="sum">综合</string>
    <string name="sales">销量</string>
    <string name="price">价格</string>
    <string name="honor">荣誉</string>
    <string name="title_activity_baobei_info">宝贝详情</string>
    <string name="fastbuy">立即购买</string>
    <string name="addshop">加入购物车</string>
    <string name="title_activity_evaluate_info">评价详情</string>
    <string name="title_activity_goods_classify">分类</string>
    <string name="title_activity_wait_evaluate">等待评价</string>
    <string name="title_activity_user_evaluate">评价</string>
    <string name="haoping">好评</string>
    <string name="zhongping">中评</string>
    <string name="chaping">差评</string>
    <string name="evaluateeidtguid">请输入您的评论</string>
    <string name="title_activity_user_shoucang">收藏</string>
    <string name="title_activity_user_back_pay">申请退款</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">发送</string>
    <string name="chatedit">点击输入内容</string>
    <string name="title_activity_login">登陆</string>
    <string name="phonenumber">手机号</string>
    <string name="password">密码</string>
    <string name="passwordfind">密码找回</string>
    <string name="register">注册</string>
    <string name="title_activity_password_find">密码找回</string>
    <string name="yanzhengma">验证码</string>
    <string name="newnumber">新密码</string>
    <string name="okbumber">确认密码 </string>
    <string name="modify">修改 </string>
    <string name="title_activity_welcome">WelcomeActivity</string>

</resources>
