<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordFindActivity" >

    <RelativeLayout
        android:id="@+id/password_find_title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/navbar_bg" >

        <ImageView
            android:id="@+id/password_find_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/return_icon" />

        <TextView
            android:id="@+id/password_find_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/password_find_back"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/password_find_back"
            android:text="@string/title_activity_password_find"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/password_find_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password_find_title_layout"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="17dp"
        android:text="@string/phonenumber" />

    <EditText
        android:id="@+id/password_find_phone_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password_find_phone_number"
        android:layout_alignBottom="@+id/password_find_phone_number"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/password_find_phone_number"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_find_yanzhengma_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_find_phone_number"
        android:layout_below="@+id/password_find_phone_number_txt"
        android:layout_marginTop="30dp"
        android:text="@string/yanzhengma" />

    <EditText
        android:id="@+id/password_find_yanzhangma_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_find_yanzhengma_txt"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/password_find_new_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_find_yanzhengma_txt"
        android:layout_below="@+id/password_find_yanzhengma_txt"
        android:layout_marginTop="30dp"
        android:text="@string/newnumber" />

    <EditText
        android:id="@+id/password_find_new_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_find_new_password_txt"
        android:layout_alignLeft="@+id/password_find_phone_number_txt"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_find_comfirm_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_find_new_password_txt"
        android:layout_below="@+id/password_find_new_password_txt"
        android:layout_marginTop="30dp"
        android:text="@string/okbumber" />

    <EditText
        android:id="@+id/password_find_comfirm_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_find_comfirm_password_txt"
        android:layout_alignLeft="@+id/password_find_new_password_edit"
        android:ems="10"
        android:inputType="textPassword" />

    <RelativeLayout
        android:id="@+id/password_find_modify_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:background="@drawable/baobeiinfo_addshop_sele" >

        <TextView
            android:id="@+id/password_find_modify_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/modify"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>
