<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedBack" >

    <RelativeLayout
        android:id="@+id/feedbacktitlelayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/navbar_bg" >

        <ImageView
            android:id="@+id/feedback_ima_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@drawable/return_icon" />

        <TextView
            android:id="@+id/feedback_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/feedback_ima_back"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/feedback_ima_back"
            android:text="@string/feedback_say" />

        <TextView
            android:id="@+id/commit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/feedback_txt"
            android:layout_alignBottom="@+id/feedback_txt"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:text="@string/commit" />

    </RelativeLayout>

    <EditText
        android:id="@+id/feedback_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/feedbacktitlelayout"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/feedback_edit" >

        <requestFocus />
    </EditText>

</RelativeLayout>
