<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/attstore_list_atthead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/attstore_head" />

        <TextView
            android:id="@+id/attstore_list_attstroename_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/attstore_list_atthead"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/attstore_list_atthead"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/attstore_list_att_xing_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/attstore_list_attstroename_txt"
            android:layout_below="@+id/attstore_list_attstroename_txt"
            android:layout_marginTop="17dp"
            android:text="@string/store_level"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/attstore_list_attxing_ima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/attstore_list_att_xing_txt"
            android:layout_marginLeft="29dp"
            android:layout_toRightOf="@+id/attstore_list_att_xing_txt"
            android:src="@drawable/attstore_xing" />

        <RelativeLayout
            android:id="@+id/attstore_list_canle_layout"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/attstore_list_atthead"
            android:layout_alignLeft="@+id/attstore_list_att_xing_txt"
            android:layout_marginBottom="0dp"
            android:background="@drawable/wake_send" >

            <TextView
                android:id="@+id/attstore_list_canle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/canleatt"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1" >
    </LinearLayout>

</RelativeLayout>