<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddressInfo" >

    <RelativeLayout
        android:id="@+id/addressinfotitlelayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/navbar_bg" >

        <ImageView
            android:id="@+id/adinfoback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/return_icon" />

        <TextView
            android:id="@+id/adinfotitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/adinfoback"
            android:layout_marginLeft="26dp"
            android:layout_toRightOf="@+id/adinfoback"
            android:text="地址详情" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adsinfo_user_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addressinfotitlelayout" >

        <TextView
            android:id="@+id/adsinfo_user_txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/receive_name" />

        <TextView
            android:id="@+id/adsinfo_user_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/adsinfo_user_txt0"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/adsinfo_user_txt0"
            android:text="TextView" />

        <ImageView
            android:id="@+id/adsinline0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:src="@drawable/cargoodsline" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adsinfo_phone_num_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/adsinfo_user_layout" >

        <TextView
            android:id="@+id/phone_number_txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/adsinfo_user_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/phone_number_txt0"
            android:layout_alignBottom="@+id/phone_number_txt0"
            android:layout_marginLeft="36dp"
            android:layout_toRightOf="@+id/phone_number_txt0"
            android:text="TextView" />

        <ImageView
            android:id="@+id/adsline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/phone_number_txt0"
            android:src="@drawable/cargoodsline" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adsinfo_post_num_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/adsinfo_phone_num_layout" >

        <TextView
            android:id="@+id/adsinfo_post_txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/post_number" />

        <TextView
            android:id="@+id/adsinfo_post_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="36dp"
            android:layout_toRightOf="@+id/adsinfo_post_txt0"
            android:text="TextView" />

        <ImageView
            android:id="@+id/adsline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/adsinfo_post_txt0"
            android:src="@drawable/cargoodsline" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adsinfo_all_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/adsinfo_post_num_layout" >

        <TextView
            android:id="@+id/adsinfo_all_txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/place_about" />

        <TextView
            android:id="@+id/adsinfo_all_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/adsinfo_all_txt0"
            android:layout_marginLeft="36dp"
            android:layout_toRightOf="@+id/adsinfo_all_txt0"
            android:text="TextView" />

        <ImageView
            android:id="@+id/adsline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/adsinfo_all_txt0"
            android:src="@drawable/cargoodsline" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adsinfo_adsinfo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/adsinfo_all_layout" >

        <TextView
            android:id="@+id/adsinfo_adsinfo_txt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/place_info" />

        <TextView
            android:id="@+id/adsinfo_adsinfo_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/adsinfo_adsinfo_txt0"
            android:layout_alignBottom="@+id/adsinfo_adsinfo_txt0"
            android:layout_marginLeft="36dp"
            android:layout_toRightOf="@+id/adsinfo_adsinfo_txt0"
            android:text="TextView" />

        <ImageView
            android:id="@+id/adsline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/adsinfo_adsinfo_txt0"
            android:src="@drawable/cargoodsline" />

    </RelativeLayout>

    <TextView
        android:id="@+id/adsinfo_txt_deledet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/adsinfo_adsinfo"
        android:layout_marginRight="17dp"
        android:layout_marginTop="22dp"
        android:text="@string/delete_address" />

    <RelativeLayout
        android:id="@+id/adsinfo_bel_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:background="@drawable/scan_bel_bg" >

        <TextView
            android:id="@+id/adsinfo_bel_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setdefultaddaddress"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:layout_toLeftOf="@+id/adsinfo_bel_txt"
            android:src="@drawable/commit_icon" />

    </RelativeLayout>

</RelativeLayout>